--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,110 +89,115 @@ p {
 }
 
 /* condense CSS code for benefit-###*/
-.benefit-lead {
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
+/*.benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
-}
+}*/
 
-.benefit-cost {
+/*.benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
-}
+} */
 
 /* condense CSS code for benefit-### h3*/
-.benefit-lead h3 {
+.benefit-lead, .benefit-brand, .benefit-cost, h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
+/*.benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+}*/
 
-.benefit-cost h3 {
+/*.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+}*/
 
 /* condense CSS code for benefit-### img*/
-.benefit-lead img {
+.benefit-lead img, .benefit-brand img, .benefit-cost img{
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
+/*.benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+}*/
 
-.benefit-cost img {
+/*.benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+}*/
 
 /* condense CSS code for search, online, social*/
-.search-engine-optimization {
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 36px;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/*.online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
+}*/
 
-.online-reputation-management {
+/*.social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
+}*/
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-/* condense CSS code for search, online, social*/
-.search-engine-optimization img {
+/* condense css*/
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
+/*.online-reputation-management img {
     max-height: 200px;
-}
+}*/
 
-.social-media-marketing img {
+/*.social-media-marketing img {
     max-height: 200px;
-}
+}*/
 
-/* condense CSS code for search, online, social*/
-.search-engine-optimization h2 {
+/*updated comment: will add font-size to css group; create one h2 css with font-size:36px */
+/*.search-engine-optimization, h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+}*/
 
-.online-reputation-management h2 {
+/*.online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+}*/
 
-.social-media-marketing h2 {
+/*.social-media-marketing h2 {
     margin-bottom: 20px;
+    font-size: 36px;
+}*/
+
+h2{
     font-size: 36px;
 }
 
